Fix: correct css code to fix footer not in correct place on mobile view

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,8 +3,6 @@ body {
     height: 100%;
     margin: 0;
     padding: 0;
-    display: flex;
-    flex-direction: column;
 }
 
 /* Style for all font */
